<resources>
    <string name="app_name">PaceCalculator</string>
    <string name="logo_jonahs">Jonah\'s</string>
    <string name="logo_pace">PACE</string>
    <string name="logo_calculator">CALCULATOR</string>
    <string name="calculate_button">CALCULATE</string>
    <string name="reset_button">RESET</string>
    <string name="time_section">TIME</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="_0">0</string>
    <string name="distance_section">DISTANCE</string>
    <string name="unit">UNIT</string>
    <string name="mile">MILE</string>
    <string name="pace">PACE</string>
    <string name="per">PER</string>
</resources>
