<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/paceSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pace"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/paceMinutesEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32sp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:hint="@string/_0"
        android:background="@null"
        android:gravity="end"
        app:layout_constraintEnd_toStartOf="@id/paceMinutesSecondsColon"
        app:layout_constraintStart_toEndOf="@id/paceSectionTitle"
        app:layout_constraintBaseline_toBaselineOf="@id/paceSectionTitle"/>

    <TextView
        android:id="@+id/paceMinutesSecondsColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/paceSecondsEditText"
        app:layout_constraintBaseline_toBaselineOf="@id/paceSectionTitle"/>

    <EditText
        android:id="@+id/paceSecondsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:hint="@string/_00"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/paceSectionTitle"/>

    <View
        android:id="@+id/paceSectionBar1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/barColor"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paceSectionTitle"/>

    <View
        android:id="@+id/paceSectionBar2"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="@color/barColor"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="@id/paceSectionBar1"
        app:layout_constraintTop_toBottomOf="@id/paceSectionBar1"
        app:layout_constraintBottom_toBottomOf="@id/paceSectionBar3"/>

    <TextView
        android:id="@+id/paceUnitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/paceSectionBar1"
        app:layout_constraintBottom_toTopOf="@id/paceSectionBar3"
        app:layout_constraintStart_toEndOf="@id/paceSectionBar2"/>

    <TextView
        android:id="@+id/paceUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mile"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBaseline_toBaselineOf="@id/paceUnitTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/paceSectionBar3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/barColor"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@id/paceSectionBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/paceSectionBar2"/>

</androidx.constraintlayout.widget.ConstraintLayout>