<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/jonahText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logo_jonahs"
        android:textStyle="italic"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:alpha="0.0"
        app:layout_constraintTop_toTopOf="@id/paceText"
        app:layout_constraintStart_toStartOf="@id/paceText"
        app:layout_constraintEnd_toEndOf="@id/paceText"
        tools:alpha="1.0"
        tools:ignore="SpUsage"/>

    <TextView
        android:id="@+id/paceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_pace"
        android:textSize="96dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:alpha="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="1.0"
        tools:ignore="SpUsage" />

    <Space
        android:id="@+id/calculatorSpace"
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@id/paceText"
        app:layout_constraintStart_toStartOf="@id/paceText"
        app:layout_constraintEnd_toEndOf="@id/paceText"/>

    <TextView
        android:id="@+id/calculatorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logo_calculator"
        android:textSize="36dp"
        android:alpha="0.0"
        app:layout_constraintBottom_toBottomOf="@id/calculatorSpace"
        app:layout_constraintStart_toStartOf="@id/paceText"
        app:layout_constraintEnd_toEndOf="@id/paceText"
        tools:alpha="1.0"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>